@@ -88,6 +88,7 @@ release 0.14.8
 	* force_recheck() no longer crashes on torrents with no metadata
 	* fixed broadcast socket regression from 0.14.7
 	* fixed hang in NATPMP when shut down while waiting for a response
+	* fixed some more error handling in bdecode
 
 release 0.14.7
 
